[package]
name = "swarm-commander"
version = "0.9.3"
edition = "2021"
license-file = "LICENSE"
description = "Manage tons of commands asynchronously"
readme = "README.md"
repository = "https://github.com/wixet-limited/swarm-commander-rs"
homepage = "https://wixet.com"

categories = ["asynchronous"]
keywords = ["async", "command"]

[dependencies]
tokio = { version = "1.21.0", features=["rt", "process", "io-util", "macros"] }
flume = "0.10.14"
anyhow = "1.0"
log = "0.4"
futures = "0.3.25"
chrono = "0.4.23"